# chess-statification

./: LICENSE  README.md  chess-challenge.cabal  chess-statification.cabal
data/: karpov_games.pgn
src/: ChessState.hs  ChessTypes.hs  Main.hs  PGN.hs
src/ChessPieces/: Knight.hs  Pawn.hs  Piece.hs
